--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/*
+
 @font-face {
     font-family: 'pinyon_scriptregular';
     src: url('../fonts/pinyonscript-regular-webfont.woff2') format('woff2'),
@@ -58,6 +58,22 @@
     font-style: normal;
 
 }
+ a:hover{
+    color: brown;
+  }
+@media only screen and (min-width: 768px){
+     .col-lg-1 {width: 8.33%;} 
+     .col-lg-2 {width: 16.66%;} 
+     .col-lg-3 {width: 25%;} 
+     .col-lg-4 {width: 33.33%;} 
+     .col-lg-5 {width: 41.66%;} 
+     .col-lg-6 {width: 50%;} 
+     .col-lg-7 {width: 58.33%;} 
+     .col-lg-8 {width: 66.66%;} 
+     .col-lg-9 {width: 75%;} 
+     .col-lg-10 {width: 83.33%;} 
+     .col-lg-11 {width: 91.66%;} 
+     .col-lg-12 {width: 100%;}
 
 
 *{
@@ -69,7 +85,7 @@ body{
 }
 
 .login{
-    background-color: rgb(138,0,0);
+    background-color: rgb(212,182,112);
     padding: 5px;
     height: 40px;
 }
@@ -77,8 +93,8 @@ body{
     margin-right: 30px;
     float: right;
     text-decoration: none;
-    background-color: rgb(212,182,112);
-    color: rgb(132,2,11);
+    background-color: rgb(132,2,11);
+    color: rgb(212,182,112);
     border-radius: 15px;
     padding: 5px 10px;
 }
@@ -89,22 +105,24 @@ header {
 .logo{
     height: 100px;
 }
-.logo img {
-    height: 80px;
-    margin-left: 70px;
+ .logo img {
+    height: 130px;
+    margin-left: 10px;
     padding-bottom: 5px;
 }
 .nav li{
-    padding: 10px;
-    margin-right: 90px; 
-    list-style-type: none;
-    float: left;
+    padding-right: 20px;
+    margin-bottom: 20px; 
+    /*list-style-type: none;*/
+    /*float: left;*/
+    justify-content: space-around;
 }
 .nav a {
     color: white;
     text-decoration: none;
     font-size: 20px;
     color: rgb(212,182,112);
+    /*margin: 20px;*/
 }
 .banbox{
     background-image: url(../images/banner.jfif);
@@ -113,17 +131,17 @@ header {
     height: 500px;
 }
 #cover {
-    /*background-color: rgb(0,0,0,0.6);
+    background-color: rgb(0,0,0,0.6);
     height: 500px;
 }
 .banner{
     text-align: right;
-    font-size: 60px;
+    font-size: 50px;
     font-family: 'montezregular';
     position: relative;
     right: 40px;
     top: 40px;
-    color: rgb(172,195,196); 
+    color: white; 
 }
 .banner h1 {
     display: inline;
@@ -168,9 +186,10 @@ header {
  .mid{
     text-align: center;
     padding-bottom: 10px;
+    font-size: 15px;
  }
 .food img{
-    height: 300px;
+    height: 200px;
     box-shadow: 0 0 5px;
 }
 .menu{
@@ -205,4 +224,174 @@ header {
 }
 h3, h2{
     color: rgb(45,11,1);
-}*/*/
+}
+
+}
+
+
+@media only screen and (min-width: 992px){
+     .col-xl-1 {width: 8.33%;} 
+     .col-xl-2 {width: 16.66%;} 
+     .col-xl-3 {width: 25%;} 
+     .col-xl-4 {width: 33.33%;} 
+     .col-xl-5 {width: 41.66%;} 
+     .col-xl-6 {width: 50%;} 
+     .col-xl-7 {width: 58.33%;} 
+     .col-xl-8 {width: 66.66%;} 
+     .col-xl-9 {width: 75%;} 
+     .col-xl-10 {width: 83.33%;} 
+     .col-xl-11 {width: 91.66%;} 
+     .col-xl-12 {width: 100%;}
+
+
+*{
+    box-sizing: border-box;
+}
+body{
+    margin: 0;
+    font-family: 'ubuntumedium';
+}
+
+.login{
+    background-color: rgb(118,60,0);
+    padding: 5px;
+    height: 40px;
+}
+.login a{
+    margin-right: 30px;
+    float: right;
+    text-decoration: none;
+    background-color: rgb(132,2,11);
+    color: rgb(212,182,112);
+    border-radius: 15px;
+    padding: 5px 10px;
+}
+header {
+    background-color: rgb(13,0,10);
+    
+}
+.logo{
+    height: 100px;
+}
+ .logo img {
+    height: 130px;
+    margin-left: 10px;
+    padding-bottom: 5px;
+}
+.nav li{
+    padding-right: 20px;
+    margin-bottom: 20px; 
+    /*list-style-type: none;*/
+    /*float: left;*/
+    justify-content: space-around;
+}
+.nav a {
+    color: white;
+    text-decoration: none;
+    font-size: 20px;
+    color: rgb(212,182,112);
+    margin: 25px;
+}
+.banbox{
+    background-image: url(../images/banner.jfif);
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 500px;
+}
+#cover {
+    background-color: rgb(0,0,0,0.6);
+    height: 500px;
+}
+.banner{
+    text-align: right;
+    font-size: 50px;
+    font-family: 'montezregular';
+    position: relative;
+    right: 40px;
+    top: 40px;
+    color: white; 
+}
+.banner h1 {
+    display: inline;
+    font-family: serif;
+}
+.link{
+    text-align: right;
+    font-size: 30px;
+    font-family: 'ubuntumedium';
+    padding-right: 60px;
+
+}
+.link a {
+    background-color: rgb(183,237,255);
+    text-decoration: none;
+    color: rgb(45,11,1);
+    border-radius: 15px; 
+    padding: 5PX
+}
+.first{
+    background-image: url(../images/background-image1.jpg);
+    background-repeat: repeat;
+}
+.intro{
+    text-align: center;
+}
+.intro h2{
+    display: inline;
+    font-size: 40px;
+    color: rgb(138,0,0);
+}
+.flex {
+    text-align: center;
+    margin-top: 50px;
+    justify-content: center;
+    align-items: center;
+    height: 300px;
+}
+.font1 a{
+    text-decoration-color: rgb(7,25,37); 
+ }
+ .mid{
+    text-align: center;
+    padding-bottom: 10px;
+    font-size: 15px;
+ }
+.food img{
+    height: 200px;
+    box-shadow: 0 0 5px;
+}
+.menu{
+    text-align: center;
+    padding: 20px;
+}
+ footer{
+    background-color: rgb(7,25,37);
+    justify-content: space-around;
+}
+.footlist li {
+    list-style-type: none;
+    line-height: 40px;
+}
+.footlist a{
+    text-decoration: none;
+    padding: 10px;
+    color: white;
+}
+.web {
+    font-size: 50px;
+    align-self: center;
+}
+.copy {
+    background-color: black;
+    color: white;
+    text-align: right;
+    padding: 10px;
+}
+.copy p {
+    display: inline;
+}
+h3, h2{
+    color: rgb(45,11,1);
+}
+
+}
