--- a/css/style.css
+++ b/css/style.css
@@ -119,8 +119,8 @@ body{
 header {
     background-color: rgb(13,0,10);
     height: 100px;
+    width: 100%;
     align-content: center;
-    
 }
 .logo{
     /*height: 100px;*/
@@ -146,15 +146,27 @@ header {
     margin: 30px;
 }
 .banbox{
-    background-image: url(../images/banner.jfif);
+    background-image: url(../images/banner2.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     height: 700px;
     /*padding-top: 50px;*/
 }
+.banbox2{
+    background-image: url(../images/banner3.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 400px;
+    /*padding-top: 50px;*/
+}
 #cover {
     background-color: rgb(0,0,0,0.6);
     height: 800px;
+    padding-top: 70px;
+}
+#cover2 {
+    background-color: rgb(0,0,0,0.6);
+    height: 400px;
     padding-top: 70px;
 }
 .banner{
@@ -166,7 +178,23 @@ header {
     top: 40px;
     color: white; 
 }
+
+.banner2{
+    text-align: center;
+    font-size: 50px;
+    font-family: 'montezregular';
+   /* position: relative;
+    right: 40px;
+    top: 40px;*/
+    color: white; 
+}
 .banner h1 {
+    display: inline;
+    font-family: 'pacificoregular';
+    font-weight: lighter;
+}
+
+.banner2 h1 {
     display: inline;
     font-family: 'pacificoregular';
     font-weight: lighter;
@@ -228,7 +256,15 @@ header {
    padding: 20px;
    position: relative;
 }
+.cfoodd{
+     padding: 20px;
+   position: relative;
+}
 .foodd h2, p {
+    margin-left: 40px;
+    padding: 5px;
+}
+.cfoodd h2, p {
     margin-left: 40px;
     padding: 5px;
 }
@@ -263,7 +299,15 @@ header {
     padding: 5px;
     position: absolute;
     top: 20px;
-    right: 65px;
+    right: 57px;
+}
+.badge2{
+    background-color: green;
+    color: white;
+    padding: 5px;
+    position: absolute;
+    top: 20px;
+    right: 115px;
 }
 .btn{
     color: white;
@@ -274,6 +318,18 @@ header {
     text-decoration-line: none;
     position: absolute;
     right: 60px;
+    bottom: 38px;
+}
+
+.btn2{
+    color: white;
+    background-color: rgb(45,11,1);
+    border: 2px solid brown;
+    border-radius: 5px;
+    padding: 10px 15px 10px 15px;
+    text-decoration-line: none;
+    position: absolute;
+    right: 115px;
     bottom: 38px;
 }
 .para{
@@ -310,7 +366,8 @@ header {
 .web {
     font-size: 50px;
     align-self: center;
-    color: seagreen;
+    color: white;
+
 }
 .para2{
    display: inline-block;
@@ -342,7 +399,7 @@ header {
 .copy {
     background-color: black;
     color: white;
-    text-align: right;
+    text-align: center;
     padding: 10px;
 }
 .copy p {
@@ -368,6 +425,54 @@ h3{
     50% {transform: scale(1.5,1.5);}
     75% {transform: scale(1.2,1.2);}
     100% {transform: scale(1,1);}
+}
+.help{
+    background-color: rgb(240,237,238);
+    padding: 20px 55px 20px 55px;
+    position: relative;
+    font-family: 'aboretoregular';
+    font-weight: bold;
+}
+.help a{
+position: absolute;
+right: 80px;
+bottom: 40px;
+}
+.helpLink{
+    border-radius: 25px;
+    padding: 15px 30px 0 30px;
+    background-color:rgb(244,178,178); 
+    padding-bottom: 20px;
+    text-decoration-line: none;
+    color: white;
+    font-weight: bolder;
+    font-family: 'aboretoregular';
+}
+aside div{
+    padding: 20px 0 30px 0;
+}
+aside input {
+    margin: 15px 0 15px 0;
+    padding: 15px;
+}
+.stcdesign{
+    width: 70px;
+    margin-right: 10px;
+}
+.stcbtn{
+    background-color: rgb(244,178,178);
+    border: none;
+    border-radius: 25px;
+    padding: 15px 30px 0 30px;
+    background-color:rgb(244,178,178); 
+    padding-bottom: 20px;
+    text-decoration-line: none;
+    color: white;
+    font-weight: bolder;
+    font-family: 'aboretoregular';
+}
+aside .stcbtn{
+    margin-top: 20px;
 }
 
 }
