--- a/css/media600min.css
+++ b/css/media600min.css
@@ -1,18 +1,17 @@
 
-@media only screen and (min-width: 768px){
-     .col-lg-1 {width: 8.33%;} 
-     .col-lg-2 {width: 16.66%;} 
-     .col-lg-3 {width: 25%;} 
-     .col-lg-4 {width: 33.33%;} 
-     .col-lg-5 {width: 41.66%;} 
-     .col-lg-6 {width: 50%;} 
-     .col-lg-7 {width: 58.33%;} 
-     .col-lg-8 {width: 66.66%;} 
-     .col-lg-9 {width: 75%;} 
-     .col-lg-10 {width: 83.33%;} 
-     .col-lg-11 {width: 91.66%;} 
-     .col-lg-12 {width: 100%;}
-
+@media only screen and (min-width: 600px) {
+     .col-md-1 {width: 8.33%;} 
+     .col-md-2 {width: 16.66%;} 
+     .col-md-3 {width: 25%;} 
+     .col-md-4 {width: 33.33%;} 
+     .col-md-5 {width: 41.66%;} 
+     .col-md-6 {width: 50%;} 
+     .col-md-7 {width: 58.33%;} 
+     .col-md-8 {width: 66.66%;} 
+     .col-md-9 {width: 75%;} 
+     .col-md-10 {width: 83.33%;} 
+     .col-md-11 {width: 91.66%;} 
+     .col-md-12 {width: 100%;}
 
 *{
     box-sizing: border-box;
@@ -20,7 +19,7 @@
 body{
     margin: 0;
     font-family: 'ubuntumedium';
-    color: yellow;
+    color: green;
 }
 
 .login{
@@ -28,6 +27,7 @@ body{
     padding: 10px;
     height: 60px;
 }
+
 .login a{
     margin-right: 30px;
     float: right;
@@ -38,65 +38,67 @@ body{
     border: 1px solid white;
     padding: 10px 10px;
 }
-header {
-    background-color: rgb(13,0,10);
-    height: 100px;
-    align-content: center;
-    
-}
-.logo{
-    /*height: 100px;*/
-}
- .logo img {
-    height: 80px;
-    margin-top: 22px;
-    /*margin-left: 10px;*/
-    /*padding-bottom: 5px;*/
-}
+
+ 
 .nav li{
-    /*padding-right: 10px;*/
-    margin: 20px 0px 0px 25px;
-    list-style-type: none;
+    padding: 7px;
+
+    /*list-style-type: none;*/
     float: left;
-}
+    margin-top: 25px;
+ }
 .nav a {
     color: white;
     text-decoration: none;
     font-size: 20px;
-    color: white;
-    /*margin-right: 10px;*/
-}
+    color: rgb(212,182,112);
+    margin: 5px;
+  }
 .offcanvas{
-    display: none; 
+    display: none;
+  }
+
+ header {
+    background-color: rgb(13,0,10);
+    height: 100px;
+     align-content: center;
 }
-.banbox{
+
+ .logo img {
+    height: 80px;
+    margin-top: 10px;
+    margin-left: 10px;
+    /*padding-bottom: 5px;*/
+}
+   .banbox{
     background-image: url(../images/banner2.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    height: 600px;
-}
-#cover {
-    background-color: rgb(0,0,0,0.6);
-    height: 600px;
-}
-.banner{
+    height: 400px;
+ }
+ #cover {
+    background-color: rgb(0,0,0,0.5);
+    height: 400px;
+ }
+
+ .banner{
     text-align: center;
-    font-size: 50px;
+    font-size: 35px;
     font-family: 'montezregular';
-    position: relative;
+   /* position: relative;
     right: 40px;
-    top: 40px;
-    color: white; 
-    padding: 30px;
+    top: 40px;*/
+    color: white;
+    padding: 35px;
 }
-.banner h1 {
+ .banner h1 {
     display: inline;
-    font-family: 'pacificoregular';
+     font-family: 'pacificoregular';
     font-weight: lighter;
 }
 .link{
-   text-align: center;
-    font-size: 30px;
+    text-align: center;
+    font-size: 20px;
     font-family: 'ubuntumedium';
     padding-right: 60px;
     animation-name: round;
@@ -104,10 +106,9 @@ header {
     animation-iteration-count: 2;
     animation-delay: 1s;
     animation-timing-function: linear;
-    padding-top: 40px;
 }
 .link a {
-     background-color: rgb(45,11,1);
+    background-color: rgb(45,11,1);
     text-decoration: none;
     color: white;
     border-radius: 15px; 
@@ -119,51 +120,64 @@ header {
 }
 .first{
     background-image: url(../images/background-image1.jpg);
-    background-repeat: repeat;
+    /*background-repeat: repeat;*/
+    background-size: contain;
 }
+
 .intro{
     text-align: center;
-    animation-name: grow;
+     animation-name: grow;
     animation-duration: 2s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
 }
 .intro h2{
     display: inline;
-    font-size: 40px;
+    font-size: 30px;
     color: rgb(138,0,0);
 }
 .flex {
     text-align: center;
-    margin-top: 50px;
-    justify-content: center;
-    align-items: center;
-    height: 300px;
+    /*margin-top: 50px;*/
+    /*justify-content: center;*/
+    /*align-items: center;*/
+    /*height: 300px;*/
 }
+
 .font1 a{
     text-decoration-color: rgb(7,25,37); 
  }
  .mid{
     text-align: center;
     padding-bottom: 10px;
-    font-size: 15px;
+    font-size: 12px;
  }
+ h3, h2{
+    color: rgb(45,11,1);
+}
+.menu{
+    /*text-align: center;*/
+    padding: 10px;
+}
+
+/*.menu div{
+    padding: 10px;
+}*/
 .foodd {
-   /*background-color: red;*/
    padding: 20px;
    position: relative;
-}
-.foodd h2, p {
-    /*margin-left: 30px;*/
-    padding: 5px;
+   /*width: 100%;*/
 }
 .forFood{
-    background-size: 100%;
+    background-size:100%;
     background-repeat: no-repeat;
     height: 250px;
-    width: 80%;
-    margin-left: 30px;
-    padding: 40px;
+    width: 90%;
+    /*margin-left: 30px;*/
+}
+.foodd h2, p {
+    margin-left: 10px;
+    padding: 5px;
 }
 .food1{
     background-image: url(../images/egusi.png); 
@@ -183,28 +197,24 @@ header {
 .food6{
      background-image: url(../images/beef.png);
 }
-
 .badge{
     background-color: green;
     color: white;
     padding: 5px;
     position: absolute;
     top: 20px;
-    right: 20px;
+    right: 70px;
 }
 .btn{
     color: white;
     background-color: rgb(45,11,1);
     border: 2px solid green;
     border-radius: 5px;
-    padding: 10px 15px 10px 15px;
+    padding: 10px 10px 10px 10px;
     text-decoration-line: none;
     position: absolute;
-    right: 30px;
-    bottom: 38px;
-}
-.menu{
-    padding: 20px;
+    right: 75px;
+    bottom: 30px;
 }
 .help{
     background-color: rgb(240,237,238);
@@ -229,7 +239,7 @@ header {
     font-family: 'aboretoregular';
 }
 
- footer{
+footer{
     background-color: rgb(7,25,37);
     /*justify-content: space-around;*/
     position: relative;
@@ -239,77 +249,86 @@ header {
     background-size: 100px 100px;
     background-repeat: no-repeat;
     background-position: center center;
-    height: 300px;
+    height: 350px;
     width: 120px;
     background-color: rgb(13,0,10);
-
-}
-.footlist {
-    padding-left: 60px;
+    margin-top: 20px;
 }
 .footlist li {
     list-style-type: none;
-    line-height: 30px;
+    line-height: 25px;
 }
+
 .footlist ul{
-    padding: 0px;
-    /*position: absolute;*/
-    /*margin-right: 20px;*/
-    /*top: 200px;*/
+    position: absolute;
+    margin-left: 70px;
+    top: 200px;
 }
 .footlist a{
     text-decoration: none;
     padding: 10px;
     color: white;
 }
-
 .para2{
    display: inline-block;
-   margin: 20px 0px 0px 5px;
+   margin: 20px 0px 0px 0px;
    color: white;
 }
+
 .forLocation{
     font-size: 15px;
     color: white;
+    margin-left: 120px;
     position: absolute;
-    bottom: 240px;
-    left: 20px;
-    padding: 5px;
+    /*bottom: 360px;*/
+    top: 110px;
+    /*padding: 5px;*/
 }
 .forPhone{
     font-size: 15px;
     color: white;
     position: absolute;
-    bottom: 200px;
-    left: 10px;
+    margin-left: 120px;
+    top: 140px;
 }
 .forEmail{
     font-size: 15px;
     color: white;
     position: absolute;
-    bottom: 170px;
-    left: 10px;
+    top: 170px;
+    margin-left: 120px;
 }
 .web {
-    font-size: 50px;
-    /*align-self: center;*/
+    font-size: 30px;
+    /*align-self: flex-end;*/
+    padding: 10px;
     color: white;
     position: absolute;
-    /*margin-left: 90px;*/
-    top: 60px;
-    right: 50px;
+    margin-left: 125px;
+    top: 315px;
 }
+
 .copy {
     background-color: black;
     color: white;
-    text-align: right;
-    padding: 10px;
+    text-align: center;
+    padding: 5px;
 }
-.copy p {
-    display: inline;
+h3{
+    font-family: 'pacificoregular';
 }
-h3, h2{
-    color: rgb(45,11,1);
+@keyframes round {
+    0%{ transform: rotate(0deg);}
+    25%{transform: rotate(90deg);}
+    50%{transform: rotate(180deg);}
+    75%{transform: rotate(270deg);}
+    100%{transform: rotate(360deg);}
 }
-
+@keyframes grow {
+    0% { transform: scale(1,1);}
+    25% { transform: scale(1.2,1.2);}
+    50% {transform: scale(1.5,1.5);}
+    75% {transform: scale(1.2,1.2);}
+    100% {transform: scale(1,1);}
+}
 }
