--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,7 @@
 body{
     margin: 0;
     font-family: 'ubuntumedium';
+    color: black;
 }
 
 .login{
@@ -145,6 +146,9 @@ header {
     color: white;
     margin: 30px;
 }
+.offcanvas{
+    display: none;
+}
 .banbox{
     background-image: url(../images/banner2.jpg);
     background-size: cover;
@@ -152,13 +156,13 @@ header {
     height: 700px;
     /*padding-top: 50px;*/
 }
-.banbox2{
+/*.banbox2{
     background-image: url(../images/banner3.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     height: 400px;
-    /*padding-top: 50px;*/
-}
+    /*padding-top: 50px;
+}*/
 #cover {
     background-color: rgb(0,0,0,0.6);
     height: 800px;
@@ -192,12 +196,14 @@ header {
     display: inline;
     font-family: 'pacificoregular';
     font-weight: lighter;
+    color: white;
 }
 
 .banner2 h1 {
     display: inline;
     font-family: 'pacificoregular';
     font-weight: lighter;
+    color: white;
 }
 .link{
     text-align: center;
@@ -218,6 +224,9 @@ header {
     border-radius: 15px;
     border: 1px solid white; 
     padding: 10PX;
+}
+.link a:hover {
+    color: brown;
 }
 .first{
     background-image: url(../images/background-image1.jpg);
@@ -256,10 +265,7 @@ header {
    padding: 20px;
    position: relative;
 }
-.cfoodd{
-     padding: 20px;
-   position: relative;
-}
+
 .foodd h2, p {
     margin-left: 40px;
     padding: 5px;
@@ -269,9 +275,10 @@ header {
     padding: 5px;
 }
 .forFood{
-    background-size: 300px 300px;
+    background-size: 100%;
     background-repeat: no-repeat;
-    height: 200px;
+    height: 250px;
+    width: 80%;
     margin-left: 30px;
     padding: 40px;
 }
@@ -299,7 +306,7 @@ header {
     padding: 5px;
     position: absolute;
     top: 20px;
-    right: 57px;
+    right: 73px;
 }
 .badge2{
     background-color: green;
@@ -339,6 +346,106 @@ header {
     /*text-align: left;*/
     padding: 30px;
 }
+#secsec{
+    height: 600px;
+    width: 100%;
+    font-size: 30px;
+}
+.psize{
+    background-size: 100%;
+    background-repeat: no-repeat;
+    width: 30%;
+    height: 100%;
+}
+.photo{
+    background-image: url(../images/foodf.jpg);
+}
+
+#first{
+    background-color: brown;
+    width: 70%;
+}
+#second{
+    background-color: royalblue;
+    width: 70%;
+}
+#third{
+    background-color: orange;
+    width: 70%;
+}
+.sideselect{
+    padding: 30px;
+    align-content: center;
+    font-size: 50px;
+    font-family: 'aboretoregular', chicleregular;
+    text-align: center;
+
+}
+.sideselect label{
+  margin-left: 40px;
+}
+.sideselect2{
+    padding: 40px;
+}
+.sideselect2 label{
+    margin-left: 40px;
+}
+.sideselect2 input{
+    margin-left: 40px;
+}
+.sideselect2 select{
+   padding: 5px;
+   margin-left: 40px;
+   margin-top: 10px;
+   font-size: 20px;
+   width: 350px;
+   border: 1px dashed ;
+   border-radius: 5px;
+}
+.sideselect3 select{
+   padding: 10px;
+   margin-left: 80px;
+   margin-top: 10px;
+   font-size: 20px;
+   width: 70%;
+   border: 1px dashed ;
+   border-radius: 5px;
+}
+.sideselect3 label{
+    margin-left: 40px;
+    padding: 40px;
+}
+.sideselect3 input{
+    margin-left: 80px;
+    margin-top: 20px;
+    width: 70%;
+    padding: 15px;
+    border-radius: 5px;
+    border: 1px dashed black;
+    transform: uppercase;
+}
+.eatshift{
+    padding: 10px;
+    width: 37%;
+    margin-top: 20px;
+}
+button{
+    margin-left: 38%;
+    margin-top: 35px;
+}
+.submit{
+   padding: 12px;
+   width: 150px;
+   font-size: 20px;
+   font-family: fantasy;
+   border-radius: 8px;
+}
+button:hover{
+    color: white;
+    background-color: black;
+}
+
+
  footer{
     background-color: rgb(7,25,37);
     justify-content: space-around;
@@ -354,20 +461,34 @@ header {
     background-color: rgb(13,0,10);
 
 }
+.footlist{
+  /*padding-left: 180px;*/
+  position: relative;
+  right: 140px;
+  /*bottom: 190px;*/
+  width: 30%;
+}
 .footlist li {
     list-style-type: none;
-    line-height: 50px;
+    line-height: 40px;
 }
 .footlist a{
     text-decoration: none;
     padding: 10px;
-    color: white;
+}
+.footlist ul{
+    position: absolute;
+    margin-left: 70px;
+    top: 50px;
+}
+.move1{
+    position: relative;
+    right: 0px;
 }
 .web {
-    font-size: 50px;
-    align-self: center;
+    font-size: 40px;
     color: white;
-
+    /*padding-left: 100px;*/
 }
 .para2{
    display: inline-block;
@@ -379,27 +500,27 @@ header {
     color: white;
     position: absolute;
     bottom: 100px;
-    left: 195px;
+    left: 45px;
     padding: 5px;
 }
 .forPhone{
     font-size: 15px;
     color: white;
     position: absolute;
-    bottom: 65px;
-    left: 195px;
+    bottom: 55px;
+    left: 35px;
 }
 .forEmail{
     font-size: 15px;
     color: white;
     position: absolute;
     bottom: 25px;
-    left: 195px;
+    left: 35px;
 }
 .copy {
     background-color: black;
     color: white;
-    text-align: center;
+    text-align: right;
     padding: 10px;
 }
 .copy p {
