--- a/css/media600max.css
+++ b/css/media600max.css
@@ -18,7 +18,6 @@
 body{
     margin: 0;
     font-family: 'ubuntumedium';
-    color: red;
 }
 
 .login{
@@ -42,17 +41,34 @@ body{
 
    .nav li{
     padding: 5px;
-    margin-top: 20px;
-    /*list-style-type: none;*/
+    margin-top: 40px;
+    list-style-type: none;
     float: left;
-    display: none;
+    /*background-color: white;*/
    }
   .nav a {
-    color: white;
+    /*color: white;*/
     text-decoration: none;
     font-size: 15px;
     color: rgb(212,182,112);
     padding-right: 7px;
+  }
+  #fornav{
+    display: none;
+  }
+  #forx{
+    color: white;
+    cursor: pointer;
+    display: inline-block;
+    /*margin-left: 150px;*/
+    /*margin-top: 100px;*/
+    position: relative;
+    bottom: 60px;
+    left: 280px;
+
+  }
+  #forx:hover{
+    color: green;
   }
 
   header {
@@ -66,10 +82,15 @@ body{
     /*height: 100px;*/
 }
 .logo img {
-    height: 80px;
+   /* height: 80px;
     margin-top: 10px;
-    margin-left: 10px;
+    margin-left: 10px;*/
     /*padding-bottom: 5px;*/
+}
+#loogo img{
+    height: 80px;
+    margin-top: 5px;
+    margin-left: 10px;
 }
 
 .offcanvas{
@@ -235,6 +256,101 @@ body{
     position: absolute;
     right: 25px;
     bottom: 30px;
+}
+#secsec{
+    height: 600px;
+    width: 100%;
+    font-size: 20px;
+}
+/*.psize{
+    width: 30%;
+    height: 100%;
+}*/
+
+.backphoto{
+    background-image: url(../images/foodf.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 600px;
+}
+
+#first{
+    
+    width: 100%;
+}
+#second{
+   
+    width: 100%;
+}
+#third{
+    
+    width: 100%;
+}
+
+.sideselect{
+    padding: 20px;
+    align-content: center;
+    font-size: 30px;
+    font-family: 'aboretoregular', chicleregular;
+    text-align: center;
+}
+.sideselect2{
+    padding: 10px;
+    margin-left: 15px;
+}
+.sideselect2 select{
+   padding: 10px;
+   /*margin-left: 15px;*/
+   margin-top: 5px;
+   font-size: 20px;
+   width: 350px;
+   border: 1px dashed ;
+   border-radius: 5px;
+}
+.sideselect3 select{
+   padding: 10px;
+   margin-left: 25px;
+   margin-top: 10px;
+   font-size: 20px;
+   width: 70%;
+   border: 1px dashed ;
+   border-radius: 5px;
+}
+.sideselect3 label{
+    margin-left: 15px;
+    padding: 10px;
+    /*font-size: 20px;*/
+}
+.sideselect3 input{
+    margin-left: 25px;
+    margin-top: 15px;
+    width: 70%;
+    padding: 15px;
+    border-radius: 5px;
+    border: 1px dashed black;
+    color: red;
+}
+.eatshift{
+    padding: 10px;
+    width: 37%;
+    margin-top: 20px;
+}
+button{
+    margin-left: 38%;
+    margin-top: 40px;
+}
+.submit{
+   padding: 12px;
+   width: 150px;
+   font-size: 20px;
+   font-family: fantasy;
+   border-radius: 8px;
+}
+button:hover{
+    color: white;
+    background-color: black;
 }
  footer{
     background-color: rgb(7,25,37);
