--- a/css/media600min.css
+++ b/css/media600min.css
@@ -42,13 +42,11 @@ body{
  
 .nav li{
     padding: 7px;
-
-    /*list-style-type: none;*/
+    list-style-type: none;
     float: left;
     margin-top: 25px;
  }
 .nav a {
-    color: white;
     text-decoration: none;
     font-size: 20px;
     color: rgb(212,182,112);
@@ -203,7 +201,7 @@ body{
     padding: 5px;
     position: absolute;
     top: 20px;
-    right: 70px;
+    right: 50px;
 }
 .btn{
     color: white;
@@ -215,6 +213,103 @@ body{
     position: absolute;
     right: 75px;
     bottom: 30px;
+}
+#secsec{
+    height: 600px;
+    width: 100%;
+    font-size: 30px;
+}
+
+.psize{
+    width: 30%;
+    height: 100%;
+}
+
+.photo{
+    background-image: url(../images/foodf.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100%;
+}
+#first{
+    background-color: brown;
+    width: 70%;
+}
+#second{
+    background-color: royalblue;
+    width: 70%;
+}
+#third{
+    background-color: orange;
+    width: 70%;
+}
+.sideselect{
+    padding: 20px;
+    align-content: center;
+    font-size: 30px;
+    font-family: 'aboretoregular', chicleregular;
+    text-align: center;
+}
+/*.sideselect label{
+  margin-left: 35px;
+}*/
+.sideselect2{
+    padding: 10px;
+    margin-left: 15px;
+}
+.sideselect2 select{
+   padding: 10px;
+   /*margin-left: 15px;*/
+   margin-top: 5px;
+   font-size: 20px;
+   width: 340px;
+   border: 1px dashed ;
+   border-radius: 5px;
+}
+
+.sideselect3 select{
+   padding: 10px;
+   margin-left: 15px;
+   margin-top: 10px;
+   font-size: 20px;
+   width: 70%;
+   border: 1px dashed ;
+   border-radius: 5px;
+}
+.sideselect3 label{
+    margin-left: 15px;
+    padding: 10px;
+    /*font-size: 20px;*/
+}
+
+.sideselect3 input{
+    margin-left: 25px;
+    margin-top: 15px;
+    width: 70%;
+    padding: 15px;
+    border-radius: 5px;
+    border: 1px dashed black;
+}
+.eatshift{
+    padding: 10px;
+    width: 37%;
+    margin-top: 20px;
+}
+button{
+    margin-left: 38%;
+    margin-top: 40px;
+}
+.submit{
+   padding: 12px;
+   width: 150px;
+   font-size: 20px;
+   font-family: fantasy;
+   border-radius: 8px;
+}
+button:hover{
+    color: white;
+    background-color: black;
 }
 .help{
     background-color: rgb(240,237,238);
