--- a/css/media481min.css
+++ b/css/media481min.css
@@ -1,5 +1,5 @@
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 481px) {
      .col-md-1 {width: 8.33%;} 
      .col-md-2 {width: 16.66%;} 
      .col-md-3 {width: 25%;} 
@@ -52,6 +52,9 @@ body{
     color: rgb(212,182,112);
     margin: 5px;
   }
+.fornav{
+    display: none;
+}
 .offcanvas{
     display: none;
   }
