--- a/css/query.css
+++ b/css/query.css
@@ -20,7 +20,6 @@
 body{
     margin: 0;
     font-family: 'ubuntumedium';
-    color: yellow;
 }
 
 .login{
@@ -40,31 +39,24 @@ body{
 }
 header {
     background-color: rgb(13,0,10);
+    position: relative;
+}
+#loogo img {
     height: 100px;
-    align-content: center;
-    
+    margin-top: 10px;
+    margin-left: 5px;
 }
-.logo{
-    /*height: 100px;*/
-}
- .logo img {
-    height: 80px;
-    margin-top: 22px;
-    /*margin-left: 10px;*/
-    /*padding-bottom: 5px;*/
-}
-.nav li{
-    /*padding-right: 10px;*/
+nav li{
+    padding-right: 20px;
     margin: 20px 0px 0px 25px;
     list-style-type: none;
     float: left;
 }
-.nav a {
+nav a {
     color: white;
     text-decoration: none;
     font-size: 20px;
     color: rgb(212,182,112);
-    /*margin-right: 10px;*/
 }
 .offcanvas{
     display: none; 
@@ -73,53 +65,46 @@ header {
     background-image: url(../images/banner2.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    height: 600px;
+    height: 500px;
 }
 #cover {
     background-color: rgb(0,0,0,0.6);
-    height: 600px;
+    height: 500px;
 }
 .banner{
     text-align: center;
-    font-size: 50px;
+    font-size: 45px;
     font-family: 'montezregular';
-    position: relative;
-    right: 40px;
-    top: 40px;
     color: white; 
-    padding: 30px;
-}
-.banner h1 {
-    display: inline;
-    font-family: 'pacificoregular';
-    font-weight: lighter;
+    padding-top: 10px;
 }
 .link{
    text-align: center;
-    font-size: 30px;
+    font-size: 25px;
     font-family: 'ubuntumedium';
-    padding-right: 60px;
     animation-name: round;
     animation-duration: 2s;
     animation-iteration-count: 2;
     animation-delay: 1s;
     animation-timing-function: linear;
-    padding-top: 40px;
+    padding-top: 10px;
 }
 .link a {
-     background-color: rgb(45,11,1);
+    background-color: rgb(45,11,1);
     text-decoration: none;
     color: white;
     border-radius: 15px; 
     border: 1px solid white;
-    padding: 10PX
+    padding: 10px;
 }
 .link a:hover {
     color: brown;
 }
 .first{
     background-image: url(../images/background-image1.jpg);
-    background-repeat: repeat;
+    /*background-repeat: no-repeat;*/
+    background-size: cover;
+    text-align: center;
 }
 .intro{
     text-align: center;
@@ -129,41 +114,37 @@ header {
     animation-timing-function: linear;
 }
 .intro h2{
-    display: inline;
     font-size: 40px;
     color: rgb(138,0,0);
 }
-.flex {
-    text-align: center;
-    margin-top: 50px;
-    justify-content: center;
-    align-items: center;
-    height: 300px;
-}
 .font1 a{
     text-decoration-color: rgb(7,25,37); 
+    font-family: 'pacificoregular'; 
+    color: rgb(45,11,1); 
  }
  .mid{
-    text-align: center;
     padding-bottom: 10px;
     font-size: 15px;
+    margin-left: 25px;
  }
 .foodd {
-   /*background-color: red;*/
-   padding: 20px;
-   position: relative;
+    margin-top: 20px;
 }
 .foodd h2, p {
-    /*margin-left: 30px;*/
-    padding: 5px;
+}
+.foodsection{
+    position: relative;
+}
+#foodsectionpad{
+    margin-bottom: 15px;
 }
 .forFood{
     background-size: 100%;
     background-repeat: no-repeat;
-    height: 250px;
+    height: 100%;
     width: 80%;
     margin-left: 30px;
-    padding: 40px;
+    margin-top: 15px;
 }
 .food1{
     background-image: url(../images/egusi.png); 
@@ -189,8 +170,8 @@ header {
     color: white;
     padding: 5px;
     position: absolute;
-    top: 20px;
-    right: 40px;
+    right: 50px;
+    font-size: 8px;
 }
 .btn{
     color: white;
@@ -199,21 +180,12 @@ header {
     border-radius: 5px;
     padding: 10px 15px 10px 15px;
     text-decoration-line: none;
-    position: absolute;
-    right: 30px;
-    bottom: 38px;
-}
-.menu{
-    padding: 20px;
 }
 #secsec{
-    height: 600px;
     width: 100%;
-    font-size: 30px;
 }
 .psize{
     width: 30%;
-    height: 100%;
 }
 .photo{
     background-image: url(../images/foodf.jpg);
@@ -237,29 +209,26 @@ header {
 .sideselect{
     padding: 30px;
     align-content: center;
-    font-size: 40px;
+    font-size: 30px;
     font-family: 'aboretoregular', chicleregular;
     text-align: center;
 }
 .sideselect label{
   margin-left: 30px;
 }
+.selectpad{
+    width: 100%;
+}
 .sideselect2{
     padding: 10px;
-}
-.sideselect2 label{
-    margin-left: 20px;
-    font-size: 18px;
-}
-.sideselect2 input{
-    margin-left: 40px;
+    /*margin-left: 55px;*/
 }
 .sideselect2 select{
    padding: 10px;
-   margin-left: 20px;
+   /*margin-left: 20px;*/
    margin-top: 5px;
    font-size: 20px;
-   width: 250px;
+   width: 73%;
    border: 1px dashed ;
    border-radius: 5px;
 }
@@ -293,7 +262,8 @@ header {
 }
 button{
     margin-left: 38%;
-    margin-top: 40px;
+    margin-top: 20px;
+    margin-bottom: 15px;
 }
 .submit{
    padding: 12px;
@@ -323,7 +293,6 @@ button:hover{
     border-radius: 25px;
     padding: 15px 15px 15px 15px;
     background-color:rgb(244,178,178); 
-    /*padding-bottom: 20px;*/
     text-decoration-line: none;
     color: white;
     font-weight: bolder;
@@ -331,79 +300,50 @@ button:hover{
 }
 
  footer{
-    background-color: rgb(7,25,37);
-    /*justify-content: space-around;*/
-    position: relative;
-}
-.footerimg{
+    background-color: rgb(13,0,10);
     background-image: url(../images/mamaify-logo1.jpeg);
-    background-size: 100px 100px;
     background-repeat: no-repeat;
     background-position: center center;
-    height: 300px;
-    width: 120px;
-    background-color: rgb(13,0,10);
-
+    color: white;
+    background-size: 200px 200px;
+    width: 100%;
+}
+.footerimg{
+    padding: 10px;
+    background-color: black;
+    opacity: 0.8;
+}
+.para2{
+   display: inline;
+   color: white;
+   margin: 5px;
+   padding: 7px;
 }
 .footlist {
-    padding-left: 60px;
+    padding-left: 0px;
+    font-family: 'ubunturegular';
 }
 .footlist li {
     list-style-type: none;
-    line-height: 30px;
-}
-.footlist ul{
-    padding: 0px;
-    /*position: absolute;*/
-    /*margin-right: 20px;*/
-    /*top: 200px;*/
+    line-height: 25px;
 }
 .footlist a{
     text-decoration: none;
     padding: 10px;
     color: white;
 }
-
-.para2{
-   display: inline-block;
-   margin: 20px 0px 0px 5px;
-   color: white;
-}
-.forLocation{
+.below{
+    margin-bottom: 10px;
     font-size: 15px;
-    color: white;
-    position: absolute;
-    bottom: 240px;
-    left: 20px;
-    padding: 5px;
 }
-.forPhone{
-    font-size: 15px;
-    color: white;
-    position: absolute;
-    bottom: 200px;
-    left: 10px;
-}
-.forEmail{
-    font-size: 15px;
-    color: white;
-    position: absolute;
-    bottom: 170px;
-    left: 10px;
-}
-.web {
-    font-size: 50px;
-    /*align-self: center;*/
-    color: white;
-    position: absolute;
-    /*margin-left: 90px;*/
-    top: 60px;
-    right: 50px;
+.move{
+    margin-top: 35px;
+    font-size: 35px;
 }
 .copy {
-    background-color: black;
-    color: white;
-    text-align: right;
+    background-color: rgb(7,25,37);
+    color: black;
+    text-align: center;
     padding: 10px;
 }
 .copy p {
@@ -411,6 +351,23 @@ button:hover{
 }
 h3, h2{
     color: rgb(45,11,1);
+}
+h3{
+    font-family: 'pacificoregular';
+}
+@keyframes round {
+    0%{ transform: rotate(0deg);}
+    25%{transform: rotate(90deg);}
+    50%{transform: rotate(180deg);}
+    75%{transform: rotate(270deg);}
+    100%{transform: rotate(360deg);}
+}
+@keyframes grow {
+    0% { transform: scale(1,1);}
+    25% { transform: scale(1.2,1.2);}
+    50% {transform: scale(1.5,1.5);}
+    75% {transform: scale(1.2,1.2);}
+    100% {transform: scale(1,1);}
 }
 
 }
