--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@
   }
 
 
-@media all and (min-width: 1025px){
+@media all and (min-width: 1024px){
      .col-xl-1 {width: 8.33%;} 
      .col-xl-2 {width: 16.66%;} 
      .col-xl-3 {width: 25%;} 
@@ -92,22 +92,21 @@
      .col-xl-12 {width: 100%;}
 
 
-*{
+ *{
     box-sizing: border-box;
-}
+  }
 
-body{
+ body{
     margin: 0;
     font-family: 'ubuntumedium';
-    color: black;
-}
+ }
 
-.login{
+ .login{
     background-color: #000;
     padding: 10px;
     height: 60px;
-}
-.login a{
+ }
+ .login a{
     margin-right: 30px;
     float: right;
     text-decoration: none;
@@ -116,207 +115,142 @@ body{
     border-radius: 15px 5px 15px 5px;
     border: 1px solid white;
     padding: 10px 15px;
-}
-header {
+ }
+ header {
     background-color: rgb(13,0,10);
-    height: 100px;
-    width: 100%;
-    align-content: center;
-}
-.logo{
-    /*height: 100px;*/
-}
- .logo img {
-    height: 80px;
-    margin: 5px 0px 0px 30px;
-}
+    position: relative;
+ }
+ #loogo img {
+    height: 120px;
+    margin-top: 10px;
+    margin-left: 5px;
+ }
 
-.nav li{
-    padding-right: 15px;
-    margin: 20px 0px 0px 25px;
-    /*padding-bottom: 20px;*/
-    /*margin-bottom: 20px; */
-    /*list-style-type: none;*/
+ nav li{
+    padding-right: 8px;
+    margin: 30px 0px 0px 25px;
+    list-style-type: none;
     float: left;
-}
-.nav a {
+ }
+ nav a {
     color: white;
     text-decoration: none;
     font-size: 20px;
     color: rgb(212,182,112);
-    margin: 30px;
-}
-.offcanvas{
+    margin: 20px;
+ }
+ .offcanvas{
     display: none;
-}
-.banbox{
+ }
+ .banbox{
     background-image: url(../images/banner2.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    height: 700px;
-    /*padding-top: 50px;*/
-}
-/*.banbox2{
-    background-image: url(../images/banner3.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 400px;
-    /*padding-top: 50px;
-}*/
-#cover {
+    height: 500px;
+ }
+ #cover {
     background-color: rgb(0,0,0,0.6);
-    height: 800px;
-    padding-top: 70px;
-}
-#cover2 {
-    background-color: rgb(0,0,0,0.6);
-    height: 400px;
-    padding-top: 70px;
-}
-.banner{
+    height: 500px;
+ }
+ .banner{
     text-align: center;
-    font-size: 50px;
+    font-size: 45px;
     font-family: 'montezregular';
-    position: relative;
-    right: 40px;
-    top: 40px;
     color: white; 
-}
-
-.banner2{
+    padding-top: 10px;
+ }
+ .link{
     text-align: center;
-    font-size: 50px;
-    font-family: 'montezregular';
-   /* position: relative;
-    right: 40px;
-    top: 40px;*/
-    color: white; 
-}
-.banner h1 {
-    display: inline;
-    font-family: 'pacificoregular';
-    font-weight: lighter;
-    color: white;
-}
-
-.banner2 h1 {
-    display: inline;
-    font-family: 'pacificoregular';
-    font-weight: lighter;
-    color: white;
-}
-.link{
-    text-align: center;
-    font-size: 30px;
+    font-size: 25px;
     font-family: 'ubuntumedium';
-    padding: 40px;
+    padding-top: 10px;
     animation-name: round;
     animation-duration: 2s;
     animation-iteration-count: 2;
     animation-delay: 1s;
     animation-timing-function: linear;
-
-}
-.link a {
+ }
+ .link a {
     background-color: rgb(45,11,1);
     text-decoration: none;
     color: white;
     border-radius: 15px;
     border: 1px solid white; 
-    padding: 10PX;
-}
-.link a:hover {
+    padding: 10px;
+ }
+ .link a:hover {
     color: brown;
-}
-.first{
+ }
+ .first{
     background-image: url(../images/background-image1.jpg);
-    background-repeat: repeat;
-}
-.intro{
+    background-size: cover;
     text-align: center;
-    padding-top: 35px;
+ }
+ .intro{
+    text-align: center;
     animation-name: grow;
     animation-duration: 2s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
-}
-.intro h2{
-    display: inline;
+ }
+ .intro h2{
     font-size: 40px;
     color: rgb(138,0,0);
-}
-.flex {
-    text-align: center;
-    margin-top: 50px;
-    justify-content: center;
-    align-items: center;
-    height: 300px;
-}
-.font1 a{
+ }
+ .font1 a{
     text-decoration-color: rgb(7,25,37); 
+    font-family: 'pacificoregular'; 
+    color: rgb(45,11,1); 
  }
  .mid{
-    text-align: center;
-    padding-bottom: 10px;
+   padding-bottom: 10px;
     font-size: 15px;
+    margin-left: 40px;
  }
-.foodd {
-   /*background-color: red;*/
-   padding: 20px;
-   position: relative;
-}
-
-.foodd h2, p {
-    margin-left: 40px;
-    padding: 5px;
-}
-.cfoodd h2, p {
-    margin-left: 40px;
-    padding: 5px;
-}
-.forFood{
-    background-size: 100%;
+ .foodd {
+   margin-top: 20px;
+ }
+ .foodsection{
+    position: relative;
+ }
+ #foodsectionpad{
+    margin-bottom: 15px;
+ }
+ .forFood{
+    background-size: 160px;
     background-repeat: no-repeat;
-    height: 250px;
-    width: 80%;
+    height: 100%;
+    width: 100%;
     margin-left: 30px;
-    padding: 40px;
-}
-.food1{
+ }
+ .food1{
     background-image: url(../images/egusi.png); 
-}
-.food2{
+ }
+ .food2{
     background-image: url(../images/rice-stew.jpg);  
-}
-.food3{
+ }
+ .food3{
     background-image: url(../images/beans.jpg);
-}
-.food4{
+ }
+ .food4{
      background-image: url(../images/fiofio.jpg);
-}
-.food5{
+ }
+ .food5{
      background-image: url(../images/bitterleaf.jpeg);
-}
-.food6{
+ }
+ .food6{
      background-image: url(../images/beef.png);
-}
-.badge{
+ }
+ .badge{
     background-color: green;
     color: white;
     padding: 5px;
     position: absolute;
-    top: 20px;
-    right: 63px;
-}
-.badge2{
-    background-color: green;
-    color: white;
-    padding: 5px;
-    position: absolute;
-    top: 20px;
-    right: 115px;
-}
-.btn{
+    top: 35px;
+    right: 50px;
+    font-size: 10px;
+ }
+ .btn{
     color: white;
     background-color: rgb(45,11,1);
     border: 2px solid green;
@@ -324,102 +258,83 @@ header {
     padding: 10px 15px 10px 15px;
     text-decoration-line: none;
     position: absolute;
-    right: 60px;
-    bottom: 38px;
-}
-
-.btn2{
-    color: white;
-    background-color: rgb(45,11,1);
-    border: 2px solid brown;
-    border-radius: 5px;
-    padding: 10px 15px 10px 15px;
-    text-decoration-line: none;
-    position: absolute;
-    right: 115px;
-    bottom: 38px;
-}
-.para{
-    font-size: 20px;
-}
-.menu{
-    /*text-align: left;*/
-    padding: 30px;
-}
-#secsec{
-    height: 600px;
+    right: 40px;
+    bottom: 28px;
+    font-size: 10px;
+ }
+ #secsec{
     width: 100%;
-    font-size: 30px;
-}
-.psize{
+ }
+ .psize{
     width: 30%;
-    height: 600px;
-}
-.photo{
+ }
+ .photo{
     background-image: url(../images/foodf.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     height: 100%;
-}
-
-#first{
+ }
+ #first{
     background-color: brown;
     width: 70%;
-}
-#second{
+ }
+ #second{
     background-color: royalblue;
     width: 70%;
-}
-#third{
+ }
+ #third{
     background-color: orange;
     width: 70%;
-}
-.sideselect{
+ }
+ .sideselect{
     padding: 30px;
     align-content: center;
     font-size: 50px;
     font-family: 'aboretoregular', chicleregular;
     text-align: center;
-
-}
-.sideselect label{
+ }
+ .sideselect label{
   margin-left: 40px;
-}
-.sideselect2{
+ }
+ .selectpad{
+    width: 100%;
+ }
+ .sideselect2{
     padding: 10px;
-}
-.sideselect2 label{
+    margin-left: 18px;
+ }
+ .sideselect2 label{
+    font-size: 20px;
     margin-left: 55px;
-    font-size: 30px;
-}
-.sideselect2 input{
+ }
+ .sideselect2 input{
     margin-left: 20px;
-}
-.sideselect2 select{
-   padding: 5px;
+ }
+ .sideselect2 select{
+   padding: 10px;
    margin-left: 55px;
-   /*margin-top: 10px;*/
+   margin-top: 10px;
    font-size: 20px;
-   width: 350px;
+   width: 73%;
    border: 1px dashed ;
    border-radius: 5px;
-}
-.sideselect3 select{
+ }
+ .sideselect3 select{
    padding: 10px;
    margin-left: 80px;
-   /*margin-top: 10px;*/
+   margin-top: 10px;
    font-size: 20px;
    width: 70%;
    border: 1px dashed ;
    border-radius: 5px;
-}
-.sideselect3 label{
+ }
+ .sideselect3 label{
     margin-left: 40px;
     padding: 40px;
     font-size: 30px;
-}
-.sideselect3 input{
+ }
+ .sideselect3 input{
     margin-left: 80px;
     margin-top: 20px;
     width: 70%;
@@ -427,144 +342,41 @@ header {
     border-radius: 5px;
     border: 1px dashed black;
     transform: uppercase;
-}
-.eatshift{
+ }
+ .eatshift{
     padding: 10px;
     width: 37%;
     margin-top: 20px;
-}
-button{
-    margin-left: 38%;
-    margin-top: 35px;
-}
-.submit{
+ }
+ button{
+   margin-left: 38%;
+    margin-top: 20px;
+    margin-bottom: 15px;
+ }
+ .submit{
    padding: 12px;
    width: 150px;
    font-size: 20px;
    font-family: fantasy;
    border-radius: 8px;
-}
-button:hover{
+ }
+ button:hover{
     color: white;
     background-color: black;
-}
-
-
- footer{
-    background-color: rgb(7,25,37);
-    justify-content: space-around;
-    position: relative;
-}
-.footerimg{
-    background-image: url(../images/mamaify-logo1.jpeg);
-    background-size: 100px 100px;
-    background-repeat: no-repeat;
-    background-position: center center;
-    height: 250px;
-    width: 120px;
-    background-color: rgb(13,0,10);
-
-}
-.footlist{
-  /*padding-left: 180px;*/
-  position: relative;
-  right: 140px;
-  /*bottom: 190px;*/
-  width: 30%;
-}
-.footlist li {
-    list-style-type: none;
-    line-height: 40px;
-}
-.footlist a{
-    text-decoration: none;
-    padding: 10px;
-}
-.footlist ul{
-    position: absolute;
-    margin-left: 70px;
-    top: 50px;
-}
-.move1{
-    position: relative;
-    right: 0px;
-}
-.web {
-    font-size: 40px;
-    color: white;
-    /*padding-left: 100px;*/
-}
-.para2{
-   display: inline-block;
-   margin: 20px 0px 0px 5px;
-   color: white;
-}
-.forLocation{
-    font-size: 15px;
-    color: white;
-    position: absolute;
-    bottom: 100px;
-    left: 30px;
-    padding: 5px;
-}
-.forPhone{
-    font-size: 15px;
-    color: white;
-    position: absolute;
-    bottom: 55px;
-    left: 20px;
-}
-.forEmail{
-    font-size: 15px;
-    color: white;
-    position: absolute;
-    bottom: 50px;
-    left: 20px;
-    padding-top: 30px;
-}
-.copy {
-    background-color: black;
-    color: white;
-    text-align: right;
-    padding: 10px;
-}
-.copy p {
-    display: inline;
-}
-h3, h2{
-    color: rgb(45,11,1);
-}
-h3{
-    font-family: 'pacificoregular';
-}
-
-@keyframes round {
-    0%{ transform: rotate(0deg);}
-    25%{transform: rotate(90deg);}
-    50%{transform: rotate(180deg);}
-    75%{transform: rotate(270deg);}
-    100%{transform: rotate(360deg);}
-}
-@keyframes grow {
-    0% { transform: scale(1,1);}
-    25% { transform: scale(1.2,1.2);}
-    50% {transform: scale(1.5,1.5);}
-    75% {transform: scale(1.2,1.2);}
-    100% {transform: scale(1,1);}
-}
-.help{
+ }
+ .help{
     background-color: rgb(240,237,238);
     padding: 20px 55px 20px 55px;
     position: relative;
     font-family: 'aboretoregular';
     font-weight: bold;
-}
-.help a{
-position: absolute;
-right: 80px;
-bottom: 40px;
-}
-.helpLink{
+ }
+ .help a{
+ position: absolute;
+ right: 80px;
+ bottom: 40px;
+ }
+ .helpLink{
     border-radius: 25px;
     padding: 15px 30px 0 30px;
     background-color:rgb(244,178,178); 
@@ -573,19 +385,93 @@ bottom: 40px;
     color: white;
     font-weight: bolder;
     font-family: 'aboretoregular';
-}
-aside div{
+ }
+ footer{
+   background-color: rgb(13,0,10);
+    background-image: url(../images/mamaify-logo1.jpeg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    color: white;
+    background-size: 200px 200px;
+    width: 100%;
+ }
+ .footerimg{
+    padding: 10px;
+    background-color: black;
+    opacity: 0.8;
+ }
+ .para2{
+   display: inline;
+   color: white;
+   margin: 5px;
+   padding: 7px;
+ }
+ .footlist{
+   padding-left: 0px;
+    font-family: 'ubunturegular';
+ }
+ .footlist li {
+    list-style-type: none;
+    line-height: 40px;
+ }
+ .footlist a{
+     text-decoration: none;
+    padding: 10px;
+    color: white;
+ }
+ .footlist ul{
+    margin-left: 80px;
+ }
+ .below{
+    margin-bottom: 10px;
+    font-size: 15px;
+ }
+ .move{
+    font-size: 25px;
+ }
+ .copy {
+    background-color: rgb(7,25,37);
+    color: black;
+    text-align: center;
+    padding: 10px;
+ }
+ .copy p {
+    display: inline;
+ }
+ h3, h2{
+    color: rgb(45,11,1);
+ }
+ h3{
+    font-family: 'pacificoregular';
+ }
+
+ @keyframes round {
+    0%{ transform: rotate(0deg);}
+    25%{transform: rotate(90deg);}
+    50%{transform: rotate(180deg);}
+    75%{transform: rotate(270deg);}
+    100%{transform: rotate(360deg);}
+ }
+ @keyframes grow {
+    0% { transform: scale(1,1);}
+    25% { transform: scale(1.2,1.2);}
+    50% {transform: scale(1.5,1.5);}
+    75% {transform: scale(1.2,1.2);}
+    100% {transform: scale(1,1);}
+ }
+
+ /*aside div{
     padding: 20px 0 30px 0;
-}
-aside input {
+ }
+ aside input {
     margin: 15px 0 15px 0;
     padding: 15px;
-}
-.stcdesign{
+ }
+ .stcdesign{
     width: 70px;
     margin-right: 10px;
-}
-.stcbtn{
+ }
+ .stcbtn{
     background-color: rgb(244,178,178);
     border: none;
     border-radius: 25px;
@@ -596,9 +482,9 @@ aside input {
     color: white;
     font-weight: bolder;
     font-family: 'aboretoregular';
-}
-aside .stcbtn{
+ }
+ aside .stcbtn{
     margin-top: 20px;
-}
-
+ }
+*/
 }
